fix overlapping div

--- a/app/assets/stylesheets/includes/page.scss
+++ b/app/assets/stylesheets/includes/page.scss
@@ -3,10 +3,11 @@
     display: flex;
     position: sticky;
     top: 0;
+    z-index: 100;
+
     padding: 0;
     margin-left: 0;
     border-bottom: 1px solid adjust-color($background-color, $lightness: -10%);
-//    background-color: $background-color;
     background: linear-gradient(50deg, adjust-color($background-color, $lightness: -1%) 0%, #F4F4F4 100%);
 
     li
